# menorah

./: .env.example  .gitignore  NOTAS.md  README.md  pyproject.toml  requirements.txt
archives/frimesa/: frimesa_autosservico_V3_NOVA.py  frimesa_distribuidor_V3_NOVA.py  frimesa_food_service_V3_NOVA.py  frimesa_varejo_tradicional_V3_NOVA.py
archives/lar/: lar_alimentosV3_Sistema NOVO.py
src/excel_automation/: __init__.py  main.py
src/excel_automation/api/: client.py
src/excel_automation/config/: settings.py
src/excel_automation/core/: orchestrator.py
src/excel_automation/excel/: __init__.py  reader.py  transformer.py  writer.py
src/excel_automation/logging_config/: __init__.py  logger.py
src/excel_automation/scraping/: __init__.py  html_scraper.py
tests/: test_api_client.py  test_excel_io.py  test_logger.py  test_orchestrator.py  test_scraper.py  test_settings.py  test_transformer.py
